starting to add midi sending abilities to midi monitor app - will add project file in last

--- a/Examples/iOS/MidiMonitor/MidiMonitor/Base.lproj/Main.storyboard
+++ b/Examples/iOS/MidiMonitor/MidiMonitor/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,8 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="midi messages will go here..." textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dot-rk-k70">
-                                <rect key="frame" x="20" y="95" width="560" height="485"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="midi messages will go here..." textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dot-rk-k70">
+                                <rect key="frame" x="16" y="95" width="343" height="524"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" notEnabled="YES"/>
@@ -65,18 +65,27 @@
                                     <action selector="bluetoothButtonFromUI:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DK0-6p-jPG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MBZ-sv-shH">
+                                <rect key="frame" x="152" y="629" width="71" height="30"/>
+                                <state key="normal" title="Send MIDI"/>
+                                <connections>
+                                    <action selector="sendMIDIButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ajs-d7-CPT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Xhs-wk-bYv" firstAttribute="leading" secondItem="NTA-gs-ktV" secondAttribute="trailing" constant="8" id="9Kd-bI-Sbv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MBZ-sv-shH" secondAttribute="bottom" constant="8" id="AWR-w4-zvo"/>
+                            <constraint firstItem="MBZ-sv-shH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DZa-Cj-aej"/>
                             <constraint firstItem="Xhs-wk-bYv" firstAttribute="centerY" secondItem="NTA-gs-ktV" secondAttribute="centerY" constant="1.75" id="GzN-u8-UWL"/>
+                            <constraint firstItem="MBZ-sv-shH" firstAttribute="top" secondItem="Dot-rk-k70" secondAttribute="bottom" constant="10" id="JYR-GB-dbk"/>
                             <constraint firstItem="Dot-rk-k70" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="75" id="KAM-s1-AHQ"/>
                             <constraint firstItem="fcO-WS-ZhL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NQf-rK-4zX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Dot-rk-k70" secondAttribute="trailing" id="POW-Uv-8Hy"/>
                             <constraint firstItem="NTA-gs-ktV" firstAttribute="leading" secondItem="fcO-WS-ZhL" secondAttribute="leading" id="Qn3-XB-ant"/>
                             <constraint firstItem="NTA-gs-ktV" firstAttribute="top" secondItem="fcO-WS-ZhL" secondAttribute="bottom" constant="26" id="U0G-Ac-ZbD"/>
                             <constraint firstAttribute="leadingMargin" secondItem="Dot-rk-k70" secondAttribute="leading" id="Uzm-Fy-Cqf"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Dot-rk-k70" secondAttribute="bottom" constant="20" id="WJs-qE-vDD"/>
                             <constraint firstAttribute="leadingMargin" secondItem="fcO-WS-ZhL" secondAttribute="leading" id="hqA-y9-iAF"/>
                         </constraints>
                     </view>
@@ -87,6 +96,103 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="97" y="275"/>
+        </scene>
+        <!--SenderVC-->
+        <scene sceneID="gYW-lG-Gps">
+            <objects>
+                <viewController storyboardIdentifier="MIDISenderVC" id="8Fc-ay-REC" customClass="MIDISenderVC" customModule="MidiMonitor" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yrG-Qy-Bvu"/>
+                        <viewControllerLayoutGuide type="bottom" id="MfI-ik-EvE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="R1n-PH-htj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tFJ-qA-NEH">
+                                <rect key="frame" x="16" y="28" width="73" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Send Note"/>
+                                <connections>
+                                    <action selector="sendNotePressed:" destination="8Fc-ay-REC" eventType="touchUpInside" id="vMe-qY-2fS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfh-Ir-blx">
+                                <rect key="frame" x="143" y="629" width="89" height="30"/>
+                                <state key="normal" title="Recieve MIDI"/>
+                                <connections>
+                                    <action selector="receiveMIDIButtonPressed:" destination="8Fc-ay-REC" eventType="touchUpInside" id="UPE-XG-PBy"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rjV-iq-FrD">
+                                <rect key="frame" x="16" y="66" width="61" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Send CC"/>
+                                <connections>
+                                    <action selector="sendCCPressed:" destination="8Fc-ay-REC" eventType="touchUpInside" id="Ee7-HK-wj3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uuW-P7-ZM7">
+                                <rect key="frame" x="16" y="104" width="80" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Send Sysex"/>
+                                <connections>
+                                    <action selector="sendSysexPressed:" destination="8Fc-ay-REC" eventType="touchUpInside" id="JxF-C5-QCz"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Enter Sysex here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8kW-dq-z82">
+                                <rect key="frame" x="16" y="142" width="343" height="203"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CC#" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sb9-lS-svS">
+                                <rect key="frame" x="102" y="67" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VAL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQ2-NJ-urc">
+                                <rect key="frame" x="176" y="66" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="woF-Tb-ku2">
+                                <rect key="frame" x="102" y="28" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="VEL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TmS-Sk-m5e">
+                                <rect key="frame" x="176" y="27" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MfI-ik-EvE" firstAttribute="top" secondItem="dfh-Ir-blx" secondAttribute="bottom" constant="8" id="ceK-io-4Yv"/>
+                            <constraint firstItem="dfh-Ir-blx" firstAttribute="centerX" secondItem="R1n-PH-htj" secondAttribute="centerX" id="j0D-41-gH9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="ccField" destination="Sb9-lS-svS" id="4Dc-KQ-Qhe"/>
+                        <outlet property="ccValField" destination="YQ2-NJ-urc" id="v6r-vr-dMj"/>
+                        <outlet property="noteNumField" destination="woF-Tb-ku2" id="EyO-Mh-qTv"/>
+                        <outlet property="noteVelField" destination="TmS-Sk-m5e" id="Yoa-YN-y6x"/>
+                        <outlet property="sysexField" destination="8kW-dq-z82" id="Jr9-1a-TFN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z0c-EZ-mhW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.60000000000002" y="274.81259370314842"/>
         </scene>
     </scenes>
 </document>
