Fixed HelloWorld examples on iOS and tvOS to init AK before the nib is done loading.

--- a/Examples/iOS/HelloObjectiveC/HelloObjectiveC/Base.lproj/Main.storyboard
+++ b/Examples/iOS/HelloObjectiveC/HelloObjectiveC/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                     <action selector="toggleSound:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FPo-Ob-AQb"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="int-Kr-iJa" customClass="AKOutputWaveformPlot" customModule="AudioKitUI">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="int-Kr-iJa" customClass="AKNodeOutputPlot" customModule="AudioKitUI">
                                 <rect key="frame" x="20" y="20" width="374" height="128"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
